--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,26 @@
 {
-  "window.zoomLevel": 1,
+  "window.zoomLevel": 0,
   "breadcrumbs.enabled": false,
-  "editor.fontSize": 12,
-  "debug.console.fontSize": 12,
-  "terminal.integrated.fontSize": 12,
+  "editor.fontSize": 14,
+  "debug.console.fontSize": 14,
+  "terminal.integrated.fontSize": 14,
   "editor.glyphMargin": false,
   "workbench.activityBar.location": "default",
-  "editor.lineNumbers": "on",
-  "files.eol": "\n", // Final de linha sempre será LF
+  "editor.lineNumbers": "off",
+  "files.eol": "\n", // End of line LF
   "workbench.editor.labelFormat": "short",
   "editor.tabSize": 2,
   "explorer.compactFolders": false,
+  "editor.minimap.enabled": false,
   "workbench.editor.enablePreview": false,
 
-  // Code Runner settings
   "code-runner.clearPreviousOutput": true,
   "code-runner.runInTerminal": true,
   "code-runner.ignoreSelection": true,
-  "code-runner.saveAllFilesBeforeRun": true,
-  "code-runner.showExecutionMessage": true,
-  "code-runner.fileDirectoryAsCwd": true,
   "code-runner.executorMap": {
-    "typescript": "clear; npx tsx"
+    "typescript": "clear ; npx tsx"
   },
 
-  // clsx Tailwind settings
   "tailwindCSS.experimental.classRegex": [
     ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
   ],
