--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@milkdown/core": "^7.18.0",
+    "@milkdown/crepe": "^7.18.0",
+    "@milkdown/ctx": "^7.18.0",
+    "@milkdown/plugin-history": "^7.18.0",
+    "@milkdown/preset-commonmark": "^7.18.0",
+    "@milkdown/theme-nord": "^7.18.0",
+    "@sparticuz/chromium": "^143.0.4",
+    "@uiw/react-md-editor": "^4.0.11",
     "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "puppeteer-core": "^24.35.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1"
   },
