--- a/package.json
+++ b/package.json
@@ -20,16 +20,24 @@
     "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.562.0",
+    "marked": "^17.0.1",
     "next": "16.1.1",
+    "prosemirror-view": "^1.41.5",
     "puppeteer-core": "^24.35.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.2",
+    "remark-strip-html": "^1.0.2",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
